k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartmeeting-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  env:
  - name: HOST
    valueFrom:
      secretKeyRef:
        name: secrets-project
        key: HOST
  tls:
    - hosts:
        - staging.smartmeeting.$(HOST)
      secretName: smartmeeting-staging-tls
  rules:
    - host: staging.smartmeeting.$(HOST)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8000
